# pylinkage

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIT License.txt  MODERNIZATION.md  README.md  ROADMAP.md  SECURITY.md  WEB_APP_PLAN.md  __init__.py  conftest.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  docs.yml  python-package-conda.yml  python-publish.yml  versioning-test.yml  versionning-test.yml
api/: __init__.py  config.py  main.py
api/models/: __init__.py  mechanism_schemas.py  optimization_schemas.py  schemas.py  synthesis_schemas.py
api/routers/: examples.py  export.py  linkages.py  mechanisms.py  optimization.py  simulation.py  synthesis.py  websocket.py
api/services/: __init__.py  export_service.py  linkage_service.py  mechanism_service.py  optimization_service.py  synthesis_service.py
api/storage/: __init__.py  memory.py
app/: linkage_manager.py  main.py  state.py
app/components/: __init__.py  file_io.py  joint_editor.py  sidebar.py  viz_panel.py
app/examples/: __init__.py  prebuilt.py
benchmarks/: benchmark_geometry.py  benchmark_integrated.py  benchmark_optimizations.py  benchmark_solver.py
docs/: changeloglink.html  code_of_conductlink.html  generate_synthesis_animation.py  generate_tutorial_assets.py  genindex.html  index.html  objects.inv  py-modindex.html  readmelink.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/api/: collections.html  exceptions.html  geometry.html  interface.html  joints.html  linkage.html  modules.html  optimization.html  optimizer.html  pylinkage.collections.html  pylinkage.geometry.html  pylinkage.html  pylinkage.joints.html  pylinkage.linkage.html  pylinkage.optimization.html  pylinkage.visualizer.html  utility.html  visualizer.html
docs/doctrees/: changeloglink.doctree  environment.pickle  index.doctree  readmelink.doctree
docs/examples/: __init__.py  drawsvg_kinematic_demo.py  examples.html  fourbar_from_lengths_demo.py  fourbar_linkage.py  function_generation_demo.py  inverted_stroke_engine.py  modules.html  motion_generation_demo.py  path_generation_demo.py  plotly_kinematic_demo.py  pso_animation_demo.py  pso_visualization_demo.py  strider.py  symbolic_linkage_demo.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readmelink.html  search.html
docs/notebooks/: 01_straight_line_synthesis.ipynb  02_optimize_coupler_curve.ipynb  03_tolerance_analysis.ipynb  04_cam_follower_timing.ipynb  05_symbolic_coupler_curve.ipynb  06_function_generation.ipynb  07_motion_generation.ipynb  08_velocity_acceleration.ipynb  09_transmission_angle_and_dof.ipynb  10_mechanism_builder.ipynb  11_multi_objective_and_scipy_optimization.ipynb  12_three_synthesis_problems.ipynb  13_population_abstractions.ipynb  14_topology_enumeration_and_synthesis.ipynb
docs/source/: code_of_conductlink.rst  conf.py  index.rst
docs/tests/: modules.html  tests.collections.html  tests.geometry.html  tests.html  tests.joints.html  tests.linkage.html  tests.optimization.html
docs/tutorials/: advanced_optimization.html  cam_follower.html  custom_joints.html  getting_started.html  graph_representation.html  index.html  kinematics_optimization.html  multi_objective.html  sensitivity_analysis.html  symbolic.html  synthesis.html  visualization.html
examples/: __init__.py  fourbar_linkage.py  inverted_stroke_engine.py  paperjs_linkage_editor.html  strider.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
lib/: __init__.py  geometry.py  linkage.py  optimizer.py
pylinkage/: __init__.py  _types.py  exceptions.py  geometry.py  linkage.py  optimizer.py  utility.py  visualizer.py
pylinkage/collections/: __init__.py  agent.py  mutable_agent.py
pylinkage/examples/: fourbar_linkage.py
pylinkage/geometry/: __init__.py  core.py  secants.py
pylinkage/interface/: __init__.py  exceptions.py  joint.py  linkage.py  revolute_joint.py
pylinkage/joints/: __init__.py  crank.py  fixed.py  joint.py  linear.py  revolute.py  static.py
pylinkage/linkage/: __init__.py  analysis.py  linkage.py  serialization.py
pylinkage/optimization/: __init__.py  async_optimization.py  grid_search.py  particle_swarm.py  utils.py
pylinkage/tests/: test_geometry.py  test_linkage.py  test_optimizer.py
pylinkage/visualizer/: __init__.py  animated.py  core.py  static.py
source/: conf.py  index.rst
source/api/: optimizer.rst
sphinx/: conf.py  index.rst
sphinx/api/: collections.rst  interface.rst  optimization.rst  optimizer.rst
sphinx/tests/: tests.linkage.rst  tests.rst
sphinx/tutorials/: getting_started.rst
src/pylinkage/: __init__.py  _compat.py  _numba_compat.py  _simulation_context.py  _types.py  dimensions.py  exceptions.py
tests/: __init__.py  test_bridge_solver_conversion.py  test_collections.py  test_dimensions.py  test_exceptions.py  test_geometry.py  test_joints.py  test_linkage.py  test_optimizer.py  test_package_init.py
tests/assur/: __init__.py  test_assur_mechanism_coverage.py  test_conversion.py  test_decomposition.py  test_decomposition_coverage.py  test_graph.py  test_groups.py  test_groups_coverage.py  test_hypergraph_conversion.py  test_mechanism_conversion.py  test_mechanism_conversion_coverage.py  test_serialization.py  test_signature.py  test_signature_coverage.py  test_triad_decomposition.py
tests/cam/: __init__.py  test_cam_follower.py  test_motion_laws.py  test_numba_core.py  test_profiles.py
tests/dyads/: __init__.py  test_cam_dyads.py  test_conversion.py  test_dyads.py  test_factory.py
tests/geometry/: __init__.py  test_core_extended.py  test_geometry.py  test_geometry_hypothesis.py  test_line_line.py  test_secants_extended.py
tests/hypergraph/: __init__.py  test_components.py  test_conversion.py  test_core.py  test_graph.py  test_hierarchy.py  test_hierarchy_extended.py  test_serialization.py  (+2 more)
(+328 files in other folders)
