[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylinkage"
version = "0.8.0"
authors = [
    {name = "Hugo Farajallah", email = "contact@hugofara.net"},
]
description = " Create and optimize kinematic planar linkages in Python "
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "linkage", "mechanism", "optimization",
    "particle swarm optimization"
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.2",
    "tqdm>=4.40.0",
]

[project.optional-dependencies]
numba = ["numba>=0.60.0"]
scipy = ["scipy>=1.10.0"]
symbolic = ["sympy>=1.12"]
pso = []  # PSO is now built-in (pure numpy), kept for backwards compatibility
viz = ["matplotlib>=3.3.4"]
plotly = ["plotly>=6.5.0"]
svg = ["drawsvg>=2.4.0"]
full = [
    "numba>=0.60.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "matplotlib>=3.3.4",
    "plotly>=6.5.0",
    "drawsvg>=2.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "hypothesis>=6.0.0",
]
docs = [
    "sphinx>=7.4.2",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.1",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
]
cad = [
    "ezdxf>=1.0.0",
    "build123d>=0.7.0",
]
analysis = [
    "pandas>=2.0.0",
]
moo = [
    "pymoo>=0.6.0",
]

[project.urls]
Homepage = "https://hugofara.github.io/pylinkage/"
Documentation = "https://hugofara.github.io/pylinkage/"
Repository = "https://github.com/HugoFara/pylinkage"
Changelog = "https://github.com/hugofara/pylinkage/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pylinkage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["pylinkage"]

[dependency-groups]
dev = [
    "numba>=0.60.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "matplotlib>=3.3.4",
    "plotly>=6.5.0",
    "drawsvg>=2.4.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "hypothesis>=6.0.0",
    "sphinx>=7.4.2",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.1",
    "bump-my-version>=1.2.5",
    "taskipy>=1.12.0",
    "nbconvert>=7.17.0",
]

[tool.taskipy.tasks]
docs = "sphinx-build -b html docs/source docs/"
docs-clean = "rm -rf docs/*.html docs/*.js docs/_* docs/objects.inv"
test = "pytest"
test-cov = "pytest --cov=pylinkage --cov-report=html"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
typecheck = "mypy src/pylinkage"
api = "python -m uvicorn api.main:app --reload --port 8000"

[tool.bumpversion]
current_version = "0.8.0"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "chore: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/pylinkage/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
