[metadata]
name = pylinkage
version = 0.2.2
author = Hugo Farajallah
description = A package intended to build and optimize planar linkages
license = MIT License
url = https://github.com/HugoFara/pylinkage
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
keywords = linkage, mechanism, optimization
zip_safe = true

[options]
packages = pylinkage
install_requires =
    numpy
    pyswarms
test_suite = pylinkage.tests
