[metadata]
name = pylinkage
version = 0.4.1
author = Hugo Farajallah
description = Build and optimize planar linkages using PSO
license = MIT License
url = https://hugofara.github.io/pylinkage/
project_urls=
    Changelog=https://hugofara.github.io/pylinkage/changeloglink.html
    Source=https://github.com/HugoFara/pylinkage
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Intended Audience :: Legal Industry
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
keywords = linkage, mechanism, optimization, particle swarm optimization
zip_safe = true

[options]
packages = pylinkage, docs/examples
install_requires =
    numpy
    pyswarms
test_suite = tests

[bumpversion]
current_version = 0.4.1
commit = False
tag = False

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:pylinkage/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:source/conf.py]
search = release = "{current_version}"
replace = release = "{new_version}"

